Fixed list jump with category and formatting messup #3 #8

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -72,7 +72,7 @@ $event_expanded_zindex: 900;
 	}
 
 	&:active {
-		overflow: visible; }
+		overflow: hidden; }
 }
 
 .category-list.expanded {
